汉字转拼音说明

--- a/汉字转拼音.md
+++ b/汉字转拼音.md
@@ -247,5 +247,11 @@ Array
 
 > PINYIN_ISNAME 如果设置了这个标志位，会使用姓氏的规则去解析读音。
 
+### 总结
+这是第二个PHP扩展了，这次写起来跟1年前相比容易了许多，错误页比较少了，继续努力吧~
 
+不要停止学习的脚本，提高自身核心竞争力。
+
+这是github地址：[pinyin](https://github.com/aizuyan/pinyin)，欢迎大家点赞、fork、
+pull-request或者提建议。
 
