汉字转拼音说明

--- a/汉字转拼音.md
+++ b/汉字转拼音.md
@@ -1,4 +1,7 @@
-### 引言
+#### 引言
+
+github地址：[aizuyan/pinyin](https://github.com/aizuyan/pinyin)
+
 无意中看到了[overtrue/pinyin](https://github.com/overtrue/pinyin)这个项目，感觉很有意思，
 这个项目做了这么一件事情：
 
@@ -24,7 +27,7 @@
 
 我的这个项目可以说是很大程度上是`安前辈`的`overtrue/pinyin`项目的另一个版本。
 
-### 设计
+#### 设计
 这个项目中会用到一个数据结构，单链表，用来存储拼音、汉字对应关系的数据，一开始想着使用`Bu
 cket`数据结构，后来觉得，这个数据结构体里面冗余的信息太多了，也不是很符合我预想的数据结构，
 so，最后使用了下面的数据结构：
@@ -55,7 +58,7 @@ typedef struct mylist {
 {汉字|词语|短语},   pin yin
 ```
 
-### 实现
+#### 实现
 实现部分，挑几个主要的函数出来：
 首先是给链表中添加汉字拼音结构体的函数，这里有个地方要注意，这里使用了c语言原声的`malloc`和
 `strdup`，这是因为这个变量是全局的，不会随着请求的结束而销毁，而且也不会区分线程，因为所有的
@@ -160,11 +163,11 @@ void str_replace(const char *from, const char *to, char *str, char *ret, zend_bo
 }
 ```
 
-### 使用
+#### 使用
 只通过一个函数和标志位来实现，使用起来也是很方便的：
 使用的时候可以参考github中的README.md，里面有详细的编译配置细节。
 
-#### 例子
+##### 例子
 ```php
 print_r(chinese_to_pinyin("彪悍的人生不需要解释！"));
 ```
@@ -247,7 +250,7 @@ Array
 
 > PINYIN_ISNAME 如果设置了这个标志位，会使用姓氏的规则去解析读音。
 
-### 总结
+#### 总结
 这是第二个PHP扩展了，这次写起来跟1年前相比容易了许多，错误页比较少了，继续努力吧~
 
 不要停止学习的脚本，提高自身核心竞争力。
