--- a/文件监控同步工具.md
+++ b/文件监控同步工具.md
@@ -66,3 +66,14 @@ if($_POST['to']){
 }
 ```
 
+##### 实现
+监控也有了，上传文件也有了，接下来就是具体的实现了：
+
+
+1. 首先就是解析运行脚本时候的参数，看看是否全量发布，是否监控，以及指定的服务器。
+2. 发布，发布这里原理很简单，但实际实现的时候很麻烦，从监控的文件夹中最长匹配路径，
+搜索、拼接路径，然后通过curl发布。
+3. 监控，监控用了管道命令，让inotify-tools一直等待，有修改就传递给管道后面的程序，
+管道后面的程序进行发布。
+
+
