--- a/文件监控同步工具.md
+++ b/文件监控同步工具.md
@@ -77,3 +77,5 @@ if($_POST['to']){
 管道后面的程序进行发布。
 
 
+##### 参考文章&记录笔记
+1. [字符串截取](https://github.com/aizuyan/common-sence/blob/master/linux-%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%88%AA%E5%8F%96.md)
