--- a/文件监控同步工具.md
+++ b/文件监控同步工具.md
@@ -1,6 +1,6 @@
 ### 文件监控同步工具
 
-##### 引言
+#### 引言
 最近开发中遇到了一个问题，多个人使用同一个测试机，又是同一时间开发
 ，这样就不能用git去更新代码了，你要更新了代码别人的功能就被你覆盖了，
 而一个取而代之的方法是通过`rz`同步代码文件，但这效率太低了，而且有可
@@ -9,22 +9,22 @@
 刚好之前做过fe开发，使用过百度的fisp，他的一个很重要的功能就是代码发
 布，于是沿着这个思路做出了这个工具。
 
-##### 如何监控文件
+#### 如何监控文件
 这里面最大的问题就是解决如何监控文件了，成百上千的文件、文件夹如何高效的监控，
-我首先想到的还是php有没有这样的扩展，果不其然，找到了一个扩展类库`inoti
-fy`，他有`inotify_*()`5个函数，但是功能太弱了让我大失所望，功能有点弱，
-不能递归监控文件夹，只能放弃使用php实现这个功能了。
+我首先想到的还是php有没有这样的扩展，果不其然，找到了一个扩展类库`inotify`，
+他有`inotify_*()`5个函数，但是功能太弱了让我大失所望，不能递归监控文
+件夹，只能放弃使用php实现这个功能了。
 
-沿着最开始的路线`inotify`继续探索，找到了linux下面的命令`inotify_tools`
-，这个功能的功能就比较强大了，可以递归的检测文件夹机器子文件夹下面的文件
+沿着最开始的路线`inotify`继续探索，找到了linux下面的命令`inotify-tools`
+，这个工具的功能就比较强大了，可以递归的监测文件夹及其子文件夹下面的文件
 ，于是就用shell实现了一个文件监控同步工具，预知具体细节，请继续往下看，
 问题一个个的解决
 
-###### 如何将文件保存到服务器
+#### 如何将文件保存到服务器
 这个借鉴了`fisp`的设计，在服务器上边放一个接受文件的脚本，通过http的方式
 将文件和要保存的地方发送给脚本，脚本进行保存，然后返回结果。
 
-这个方法的优点很明显：在互联网公司，web服务一般都是有的，直接将脚本放上去
+这个方法的优点很明显：在互联网公司，web服务一般都是有部署的，直接将脚本放上去
 配置好目录权限，就可以用了，简单方便。
 
 下面是服务端脚本的php代码
@@ -66,9 +66,10 @@ if($_POST['to']){
 }
 ```
 
-##### 实现
+#### 实现
 监控也有了，上传文件也有了，接下来就是具体的实现了：
 
+![](http://images2015.cnblogs.com/blog/675818/201607/675818-20160718232659435-435633398.png)
 
 1. 首先就是解析运行脚本时候的参数，看看是否全量发布，是否监控，以及指定的服务器。
 2. 发布，发布这里原理很简单，但实际实现的时候很麻烦，从监控的文件夹中最长匹配路径，
@@ -76,6 +77,7 @@ if($_POST['to']){
 3. 监控，监控用了管道命令，让inotify-tools一直等待，有修改就传递给管道后面的程序，
 管道后面的程序进行发布。
 
+#### 例子
 
-##### 参考文章&记录笔记
+#### 参考文章&记录笔记
 1. [字符串截取](https://github.com/aizuyan/common-sence/blob/master/linux-%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%88%AA%E5%8F%96.md)
